--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -133,7 +133,7 @@ const storyStepCount = companies.length;
 
 <section
   id="experience"
-  class="section-fade mx-auto max-w-5xl px-6 py-16 lg:py-24"
+  class="section-fade mx-auto max-w-5xl px-6 py-6 sm:py-16 lg:py-24"
   data-motion="reveal handoff"
   data-motion-once="false"
   data-motion-distance="26"
@@ -144,7 +144,7 @@ const storyStepCount = companies.length;
       <SectionHeader number="02" title="Experience" id="experience-heading" />
     </div>
 
-    <div class="space-y-14">
+    <div class="space-y-6 sm:space-y-14">
       <div
         class="experience-story"
         data-motion="pin-story"
